Shorten the footnote

--- a/tex/p194.tex
+++ b/tex/p194.tex
@@ -65,7 +65,7 @@
 \vs p194 4:3 “Day by day they continued steadfastly and with one accord in the temple and breaking bread at home. They took their food with gladness and singleness of heart, praising God and having favour with all the people. They were all filled with the spirit, and they spoke the word of God with boldness. And the multitudes of those who believed were of one heart and soul; and not one of them said that aught of the things which he possessed was his own, and they had all things in common.”
 \vs p194 4:4 \pc What has happened to these men whom Jesus had ordained to go forth preaching the gospel of the kingdom, the fatherhood of God and the brotherhood of man? They have a new gospel; they are on fire with a new experience; they are filled with a new spiritual energy. Their message has suddenly shifted to the proclamation of the risen Christ: “Jesus of Nazareth, a man God approved by mighty works and wonders; him, being delivered up by the determinate counsel and foreknowledge of God, you did crucify and slay. The things which God foreshadowed by the mouth of all the prophets, he thus fulfilled. This Jesus did God raise up. God has made him both Lord and Christ. Being, by the right hand of God, exalted and having received from the Father the promise of the spirit, he has poured forth this which you see and hear. Repent, that your sins may be blotted out; that the Father may send the Christ, who has been appointed for you, even Jesus, whom the heaven must receive until the times of the restoration of all things.”
 \vs p194 4:5 The gospel of the kingdom, the message of Jesus, had been suddenly changed into the gospel of the Lord Jesus Christ. They now proclaimed the facts of his life, death, and resurrection and preached the hope of his speedy return to this world to finish the work he began. Thus the message of the early believers had to do with preaching about the facts of his first coming and with teaching the hope of his second coming, an event which they deemed to be very near at hand.
-\vs p194 4:6 Christ was about to become the creed of the rapidly forming church. Jesus lives; he died for men; he gave the spirit; he is coming again. Jesus filled all their thoughts and determined all their new concepts\fnc{\textbf{all their new concepts}, In 1955 text: all their new concept.} of God and everything else. They were too much enthused over the new doctrine that “God is the Father of the Lord Jesus” to be concerned with the old message that “God is the loving Father of all men,” even of every single individual. True, a marvellous manifestation of brotherly love and unexampled good will did spring up in these early communities of believers. But it was a fellowship of believers in Jesus, not a fellowship of brothers in the family kingdom of the Father in heaven. Their good will arose from the love born of the concept of Jesus’ bestowal and not from the recognition of the brotherhood of mortal man. Nevertheless, they were filled with joy, and they lived such new and unique lives that all men were attracted to their teachings about Jesus. They made the great mistake of using the living and illustrative commentary on the gospel of the kingdom for that gospel, but even that represented the greatest religion mankind had ever known.
+\vs p194 4:6 Christ was about to become the creed of the rapidly forming church. Jesus lives; he died for men; he gave the spirit; he is coming again. Jesus filled all their thoughts and determined all their new concepts\fnc{In 1955 text ``concept'' in the singular.} of God and everything else. They were too much enthused over the new doctrine that “God is the Father of the Lord Jesus” to be concerned with the old message that “God is the loving Father of all men,” even of every single individual. True, a marvellous manifestation of brotherly love and unexampled good will did spring up in these early communities of believers. But it was a fellowship of believers in Jesus, not a fellowship of brothers in the family kingdom of the Father in heaven. Their good will arose from the love born of the concept of Jesus’ bestowal and not from the recognition of the brotherhood of mortal man. Nevertheless, they were filled with joy, and they lived such new and unique lives that all men were attracted to their teachings about Jesus. They made the great mistake of using the living and illustrative commentary on the gospel of the kingdom for that gospel, but even that represented the greatest religion mankind had ever known.
 \vs p194 4:7 Unmistakably, a new fellowship was arising in the world. “The multitude who believed continued steadfastly in the apostles’ teaching and fellowship, in the breaking of bread, and in prayers.” They called each other brother and sister; they greeted one another with a holy kiss; they ministered to the poor. It was a fellowship of living as well as of worship. They were not communal by decree but by the desire to share their goods with their fellow believers. They confidently expected that Jesus would return to complete the establishment of the Father’s kingdom during their generation. This spontaneous sharing of earthly possessions was not a direct feature of Jesus’ teaching; it came about because these men and women so sincerely and so confidently believed that he was to return any day to finish his work and to consummate the kingdom. But the final results of this well\hyp{}meant experiment in thoughtless brotherly love were disastrous and sorrow\hyp{}breeding. Thousands of earnest believers sold their property and disposed of all their capital goods and other productive assets. With the passing of time, the dwindling resources of Christian “equal\hyp{}sharing” came to an \bibemph{end ---} but the world did not. Very soon the believers at Antioch were taking up a collection to keep their fellow believers at Jerusalem from starving.
 \vs p194 4:8 \pc In these days they celebrated the Lord’s Supper after the manner of its establishment; that is, they assembled for a social meal of good fellowship and partook of the sacrament at the end of the meal.
 \vs p194 4:9 \pc At first they baptized in the name of Jesus; it was almost 20 years before they began to baptize in “the name of the Father, the Son, and the Holy Spirit.” Baptism was all that was required for admission into the fellowship of believers. They had no organization as yet; it was simply the Jesus brotherhood.
