Shorten the footnotes

--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -192,7 +192,7 @@
 \vs p000 12:8 \pc The Ultimate Trinity is experientially unifying in completion, but we truly doubt the possibility of such full unification of the Absolute Trinity. Our concept, however, of the eternal Paradise Trinity is an ever\hyp{}present reminder that Deity trinitization may accomplish what is otherwise nonattainable; hence do we postulate the sometime appearance of the \bibemph{Supreme\hyp{}Ultimate} and the possible trinitization\hyp{}factualization of God the Absolute.
 \vs p000 12:9 \pc The philosophers of the universes postulate a \bibemph{Trinity of Trinities,} an existential\hyp{}experiential Trinity Infinite, but they are not able to envisage its personalization; possibly it would equivalate to the person of the Universal Father on the conceptual level of the I AM. But irrespective of all this, the original Paradise Trinity is potentially infinite since the Universal Father actually is infinite.
 \usection{Acknowledgement}
-\vs p000 12:11 In formulating the succeeding presentations having to do with the portrayal of the character of the Universal Father and the nature of his Paradise associates, together with an attempted description of the perfect central universe and the encircling seven superuniverses\fnst{Another clear confirmation (cf. \bibref[0:0.1]{p000 0:1}, \bibref[0:0.4]{p000 0:4} and \bibref[0:2.11]{p000 2:11}), that this Foreword is intended for papers 1--31 only and not the entire so-called ``Urantia \textbf{Book}''.}, we are to be guided by the mandate of the superuniverse rulers which directs that we shall, in all our efforts to reveal truth and co\hyp{}ordinate essential knowledge, give preference to the highest existing human concepts pertaining to the subjects to be presented. We may resort to pure revelation only when the concept of presentation has had no adequate previous expression by the human mind.
+\vs p000 12:11 In formulating the succeeding presentations having to do with the portrayal of the character of the Universal Father and the nature of his Paradise associates, together with an attempted description of the perfect central universe and the encircling seven superuniverses\fnst{Another clear confirmation (cf. \bibref[0:0.1]{p000 0:1}, \bibref[0:0.4]{p000 0:4} and \bibref[0:2.11]{p000 2:11}), that this Foreword is intended for papers 1--31 only.}, we are to be guided by the mandate of the superuniverse rulers which directs that we shall, in all our efforts to reveal truth and co\hyp{}ordinate essential knowledge, give preference to the highest existing human concepts pertaining to the subjects to be presented. We may resort to pure revelation only when the concept of presentation has had no adequate previous expression by the human mind.
 \vs p000 12:12 Successive planetary revelations of divine truth invariably embrace the highest existing concepts of spiritual values as a part of the new and enhanced co\hyp{}ordination of planetary knowledge. Accordingly, in making these presentations about God and his universe associates, we have selected as the basis of these papers more than one thousand human concepts representing the highest and most advanced planetary knowledge of spiritual values and universe meanings. Wherein these human concepts, assembled from the God\hyp{}knowing mortals of the past and the present, are inadequate to portray the truth as we are directed to reveal it, we will unhesitatingly supplement them, for this purpose drawing upon our own superior knowledge of the reality and divinity of the Paradise Deities and their transcendent residential universe.
 \vs p000 12:13 We are fully cognizant of the difficulties of our assignment; we recognize the impossibility of fully translating the language of the concepts of divinity and eternity into the symbols of the language of the finite concepts of the mortal mind. But we know that there dwells within the human mind a fragment of God, and that there sojourns with the human soul the Spirit of Truth; and we further know that these spirit forces conspire to enable material man to grasp the reality of spiritual values and to comprehend the philosophy of universe meanings. But even more certainly we know that these spirits of the Divine Presence are able to assist man in the spiritual appropriation of all truth contributory to the enhancement of the ever\hyp{}progressing reality of personal religious experience --- God\hyp{}consciousness.
 \vsetoff
