--- a/tex/p051.tex
+++ b/tex/p051.tex
@@ -49,7 +49,7 @@
 \vs p051 5:3 On normal worlds the Planetary Adam and Eve never mate with the evolutionary races. This work of biologic betterment is a function of the Adamic progeny. But these Adamites do not go out among the races; the prince’s staff bring to the Garden of Eden the superior men and women for voluntary mating with the Adamic offspring. And on most worlds it is considered the highest honour to be selected as a candidate for mating with the sons and daughters of the garden.
 \vs p051 5:4 For the first time the racial wars and other tribal struggles are diminished, while the world races increasingly strive to qualify for recognition and admission to the garden. You can at best have but a very meagre idea of how this competitive struggle comes to occupy the centre of all activities on a normal planet. This whole scheme of race improvement was early wrecked on Urantia.
 \vs p051 5:5 \pc The violet race is a monogamous people, and every evolutionary man or woman uniting with the Adamic sons and daughters pledges not to take other mates and to instruct his or her children in single\hyp{}matedness. The children of each of these unions are educated and trained in the schools of the Planetary Prince and then are permitted to go forth to the race of their evolutionary parent, there to marry among the selected groups of superior mortals.
-\vs p051 5:6 When this strain of the Material Sons is added to the evolving races of the worlds, a new and greater era of evolutionary progress is initiated. Following this procreative outpouring of imported ability and superevolutionary traits there ensues a succession of rapid strides in civilization and racial development; in 100,000 years more progress is made than in 1,000,000 years of former struggle. On\fnc{\textbf{On}, 1955 text: \bibtextul{In}.} your world, even in the face of the miscarriage of the ordained plans, great progress has been made since the gift to your peoples of Adam’s life plasm.
+\vs p051 5:6 When this strain of the Material Sons is added to the evolving races of the worlds, a new and greater era of evolutionary progress is initiated. Following this procreative outpouring of imported ability and superevolutionary traits there ensues a succession of rapid strides in civilization and racial development; in 100,000 years more progress is made than in 1,000,000 years of former struggle. On\fnc{In the 1955 text ``In''.} your world, even in the face of the miscarriage of the ordained plans, great progress has been made since the gift to your peoples of Adam’s life plasm.
 \vs p051 5:7 But while the pure\hyp{}line children of a planetary Garden of Eden can bestow themselves upon the superior members of the evolutionary races and thereby upstep the biologic level of mankind, it would not prove beneficial for the higher strains of Urantia mortals to mate with the lower races; such an unwise procedure would jeopardize all civilization on your world. Having failed to achieve race harmonization by the Adamic technique, you must now work out your planetary problem of race improvement by other and largely human methods of adaptation and control.
 \usection{The Edenic Regime}
 \vs p051 6:1 On most of the inhabited worlds the Gardens of Eden remain as superb cultural centres and continue to function as the social patterns of planetary conduct and usage age after age. Even in early times when the violet peoples are relatively segregated, their schools receive suitable candidates from among the world races, while the industrial developments of the garden open up new channels of commercial intercourse. Thus do the Adams and Eves and their progeny contribute to the sudden expansion of culture and to the rapid improvement of the evolutionary races of their worlds. And all of these relationships are augmented and sealed by the amalgamation of the evolutionary races and the sons of Adam, resulting in the immediate upstepping of biologic status, the quickening of intellectual potential, and the enhancement of spiritual receptivity.
