--- a/tex/p097.tex
+++ b/tex/p097.tex
@@ -48,7 +48,7 @@
 \vs p097 5:3 Speaking to the fear\hyp{}ridden and soul\hyp{}hungry Hebrews, this prophet said: “Arise and shine, for your light has come, and the glory of the Lord has risen upon you.” “The spirit of the Lord is upon me because he has anointed me to preach good tidings to the meek; he has sent me to bind up the brokenhearted, to proclaim liberty to the captives and the opening of the prison to those who are bound.” “I will greatly rejoice in the Lord, my soul shall be joyful in my God, for he has clothed me with the garments of salvation and has covered me with his robe of righteousness.” “In all their afflictions he was afflicted, and the angel of his presence saved them. In his love and in his pity he redeemed them.”
 \vs p097 5:4 \pc This Isaiah was followed by Micah and Obadiah, who confirmed and embellished his soul\hyp{}satisfying gospel. And these two brave messengers boldly denounced the priest\hyp{}ridden ritual of the Hebrews and fearlessly attacked the whole sacrificial system.
 \vs p097 5:5 Micah denounced “the rulers who judge for reward and the priests who teach for hire and the prophets who divine for money.” He taught of a day of freedom from superstition and priestcraft, saying: “But every man shall sit under his own vine, and no one shall make him afraid, for all people will live, each one according to his understanding of God.”
-\vs p097 5:6 Ever the burden of Micah’s message was: “Shall I come before God with burnt offerings? Will the Lord be pleased with a thousand rams or with ten thousand rivers of oil? Shall I give my first\hyp{}born for my transgression, the fruit of my body for the sin of my soul? He has shown me, O man, what is good; and what does the Lord require of you but to do justly and to love mercy and to walk humbly with your God?”\fnc{\textbf{with your God?}, In 1955 text: with your God.} And it was a great age; these were indeed stirring times when mortal man heard, and some even believed, such emancipating messages more than two and a half millenniums ago. And but for the stubborn resistance of the priests, these teachers would have overthrown the whole bloody ceremonial of the Hebrew ritual of worship.
+\vs p097 5:6 Ever the burden of Micah’s message was: “Shall I come before God with burnt offerings? Will the Lord be pleased with a thousand rams or with ten thousand rivers of oil? Shall I give my first\hyp{}born for my transgression, the fruit of my body for the sin of my soul? He has shown me, O man, what is good; and what does the Lord require of you but to do justly and to love mercy and to walk humbly with your God?”\fnc{In 1955 text no question mark.} And it was a great age; these were indeed stirring times when mortal man heard, and some even believed, such emancipating messages more than two and a half millenniums ago. And but for the stubborn resistance of the priests, these teachers would have overthrown the whole bloody ceremonial of the Hebrew ritual of worship.
 \usection{Jeremiah the Fearless}
 \vs p097 6:1 While several teachers continued to expound the gospel of Isaiah, it remained for Jeremiah to take the next bold step in the internationalization of Yahweh, God of the Hebrews.
 \vs p097 6:2 Jeremiah fearlessly declared that Yahweh was not on the side of the Hebrews in their military struggles with other nations. He asserted that Yahweh was God of all the earth, of all nations and of all peoples. Jeremiah’s teaching was the crescendo of the rising wave of the internationalization of the God of Israel; finally and forever did this intrepid preacher proclaim that Yahweh was God of all nations, and that there was no Osiris for the Egyptians, Bel for the Babylonians, Ashur for the Assyrians, or Dagon for the Philistines. And thus did the religion of the Hebrews share in that renaissance of monotheism throughout the world at about and following this time; at last the concept of Yahweh had ascended to a Deity level of planetary and even cosmic dignity. But many of Jeremiah’s associates found it difficult to conceive of Yahweh apart from the Hebrew nation.
