--- a/tex/p053.tex
+++ b/tex/p053.tex
@@ -63,7 +63,7 @@
 \vs p053 7:5 No beings of Paradise origin were involved in disloyalty. Together with the Solitary Messengers they took up headquarters on the world of the Spirit and remained under the leadership of the Faithful of Days of Edentia. None of the conciliators apostatized, nor did a single one of the Celestial Recorders go astray. But a heavy toll was taken of the Morontia Companions and the Mansion World Teachers.
 \vs p053 7:6 Of the supreme order of seraphim, not an angel was lost, but a considerable group of the next order, the superior, were deceived and ensnared. Likewise a few of the third or supervisor order of angels were misled. But the terrible breakdown came in the fourth group, the administrator angels, those seraphim who are normally assigned to the duties of the system capitals. Manotia saved almost \bibfrac{2}{3}\ts{rds} of them, but slightly over \bibfrac{1}{3}\ts{rd} followed their chief into the rebel ranks. \bibfrac{1}{3}\ts{rd} of all the Jerusem cherubim attached to the administrator angels were lost with their disloyal seraphim.
 \vs p053 7:7 Of the planetary angelic helpers, those assigned to the Material Sons, about \bibfrac{1}{3}\ts{rd} were deceived, and almost 10\% of the transition ministers were ensnared. In symbol John saw this when he wrote\fnst{Note that the quotation from Revelation~12:4 is not exact. The Greek (and almost all other) sources say ``cast them into the earth'' and not ``cast them down in darkness''. However, it is worth mentioning that some ancient Armenian MSS omit the phrase ``into the earth'' and instead say ``from heaven''.} of the great red dragon, saying: “And his tail drew a third part of the stars of heaven and cast them down in darkness.”
-\vs p053 7:8 The greatest loss occurred in the angelic ranks, but most of the lower orders of intelligence were involved in disloyalty. Of the 681,217\fnc{In 1955 text ``681,227''. The change was made because in \bibref[51:1.5]{p051 1:5} it is stated that the total number of Material Sons lost is $13+681,204=681,217$.}} Material Sons lost in Satania, 95\% were casualties of the Lucifer rebellion. Large numbers of midway creatures were lost on those individual planets whose Planetary Princes joined the Lucifer cause.
+\vs p053 7:8 The greatest loss occurred in the angelic ranks, but most of the lower orders of intelligence were involved in disloyalty. Of the 681,217\fnc{In 1955 text ``681,227''. The change was made because in \bibref[51:1.5]{p051 1:5} it is stated that the total number of Material Sons lost is $13+681,204=681,217$.} Material Sons lost in Satania, 95\% were casualties of the Lucifer rebellion. Large numbers of midway creatures were lost on those individual planets whose Planetary Princes joined the Lucifer cause.
 \vs p053 7:9 \pc In many respects this rebellion was the most widespread and disastrous of all such occurrences in Nebadon. More personalities were involved in this insurrection than in both of the others. And it is to their everlasting dishonour that the emissaries of Lucifer and Satan spared not the infant\hyp{}training schools on the finaliter cultural planet but rather sought to corrupt these developing minds in mercy salvaged from the evolutionary worlds.
 \vs p053 7:10 \pc The ascending mortals were vulnerable, but they withstood the sophistries of rebellion better than the lower spirits. While many on the lower mansion worlds, those who had not attained final fusion with their Adjusters, fell, it is recorded to the glory of the wisdom of the ascension scheme that not a single member of the Satania ascendant citizenship resident on Jerusem participated in the Lucifer rebellion.
 \vs p053 7:11 Hour by hour and day by day the broadcast stations of all Nebadon were thronged by the anxious watchers of every imaginable class of celestial intelligence, who intently perused the bulletins of the Satania rebellion and rejoiced as the reports continuously narrated the unswerving loyalty of the ascending mortals who, under their Melchizedek leadership, successfully withstood the combined and protracted efforts of all the subtle evil forces which so swiftly gathered around the banners of secession and sin.
